configuracion de jwr, swagger y token, DBContext e entityFramework

--- a/1_Service/Service.MSPizzeria.WebApi/appsettings.json
+++ b/1_Service/Service.MSPizzeria.WebApi/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "SECRETO",
+    "ExperyMinutes": 60,
+    "Issuer": "MicroServicePizzeria",
+    "Audience": "MicroServicePizzeria"
+  },
+  "connectionStrings": {
+    "DefaultConnection": "Server=tcp:{host};Initial Catalog=CleanArchitectureExample;Persist Security Info=False;User ID={USUARIO};Password={TU_PASSWORD};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=1000;"
+  }
 }
