--- a/1_Service/Service.MSPizzeria.WebApi/Service.MSPizzeria.WebApi.csproj
+++ b/1_Service/Service.MSPizzeria.WebApi/Service.MSPizzeria.WebApi.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="MediatR" Version="12.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
@@ -24,9 +24,14 @@
     <ProjectReference Include="..\..\4_Infrastructure\Infrastructure.MSPizzeria.Data\Infrastructure.MSPizzeria.Data.csproj" />
     <ProjectReference Include="..\..\4_Infrastructure\Infrastructure.MSPizzeria.Repository\Infrastructure.MSPizzeria.Repository.csproj" />
     <ProjectReference Include="..\..\4_Infrastructure\Infrastructure.MSPizzeria.Auth\Infrastructure.MSPizzeria.Auth.csproj" />
+    <ProjectReference Include="..\..\4_Infrastructure\Infrastructure.MSPizzeria.Service\Infrastructure.MSPizzeria.Service.csproj" />
     <ProjectReference Include="..\..\5_Transversal\Transversal.MSPizzeria.Common\Transversal.MSPizzeria.Common.csproj" />
     <ProjectReference Include="..\..\5_Transversal\Transversal.MSPizzeria.Mapper\Transversal.MSPizzeria.Mapper.csproj" />
     <ProjectReference Include="..\..\5_Transversal\Transversal.MSPizzeria.Logging\Transversal.MSPizzeria.Logging.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
