--- a/4_Infrastructure/Infrastructure.MSPizzeria.Interface/Infrastructure.MSPizzeria.Interface.csproj
+++ b/4_Infrastructure/Infrastructure.MSPizzeria.Interface/Infrastructure.MSPizzeria.Interface.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\2_Application\Application.MSPizzeria.DTO\Application.MSPizzeria.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
