--- a/4_Infrastructure/Infrastructure.MSPizzeria.Interface/Infrastructure.MSPizzeria.Interface.csproj
+++ b/4_Infrastructure/Infrastructure.MSPizzeria.Interface/Infrastructure.MSPizzeria.Interface.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\2_Application\Application.MSPizzeria.DTO\Application.MSPizzeria.DTO.csproj" />
+    <ProjectReference Include="..\..\3_Domain\Domain.MSPizzeria.Entity\Domain.MSPizzeria.Entity.csproj" />
   </ItemGroup>
 
 </Project>
