--- a/1_Service/Service.MSPizzeria.WebApi/appsettings.json
+++ b/1_Service/Service.MSPizzeria.WebApi/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Secret": "SECRETO",
-    "ExperyMinutes": 60,
+    "Secret": "tu_clave_secreta_muy_larga_de_al_menos_32_caracteres",
+    "ExpiryMinutes": 60,
     "Issuer": "MicroServicePizzeria",
     "Audience": "MicroServicePizzeria"
   },
-  "connectionStrings": {
-    "DefaultConnection": "Server=tcp:{host};Initial Catalog=CleanArchitectureExample;Persist Security Info=False;User ID={USUARIO};Password={TU_PASSWORD};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=1000;"
+  "ConnectionStrings": {
+    "defaultConnection": "Server=localhost; Database=POSPizzeria; Integrated Security=True; Encrypt=True; TrustServerCertificate=True;"
   }
 }
