--- a/2_Application/Application.MSPizzeria.Validator/Application.MSPizzeria.Validator.csproj
+++ b/2_Application/Application.MSPizzeria.Validator/Application.MSPizzeria.Validator.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application.MSPizzeria.DTO\Application.MSPizzeria.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
