--- a/3_Domain/Domain.MSPizzeria.Core/Domain.MSPizzeria.Core.csproj
+++ b/3_Domain/Domain.MSPizzeria.Core/Domain.MSPizzeria.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\4_Infrastructure\Infrastructure.MSPizzeria.Interface\Infrastructure.MSPizzeria.Interface.csproj" />
+    <ProjectReference Include="..\Domain.MSPizzeria.Interface\Domain.MSPizzeria.Interface.csproj" />
+  </ItemGroup>
+
 </Project>
