--- a/3_Domain/Domain.MSPizzeria.Interface/Domain.MSPizzeria.Interface.csproj
+++ b/3_Domain/Domain.MSPizzeria.Interface/Domain.MSPizzeria.Interface.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.MSPizzeria.Entity\Domain.MSPizzeria.Entity.csproj" />
+  </ItemGroup>
+
 </Project>
