--- a/4_Infrastructure/Infrastructure.MSPizzeria.Data/Infrastructure.MSPizzeria.Data.csproj
+++ b/4_Infrastructure/Infrastructure.MSPizzeria.Data/Infrastructure.MSPizzeria.Data.csproj
@@ -1,12 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\..\3_Domain\Domain.MSPizzeria.Entity\Domain.MSPizzeria.Entity.csproj" />
     <ProjectReference Include="..\..\5_Transversal\Transversal.MSPizzeria.Common\Transversal.MSPizzeria.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10" />
   </ItemGroup>
 
   <PropertyGroup>
